# NeuroRouteCalme

./: .gitignore  README.md  casablanca_pedestrian_graph_export.py  casablanca_visualisation.py  criticism.md  data_export_and_cache_guide.md  db.py  deep_scan.py  demo.py  demo_100_routes.py  evaluation.md  guidance.md  main.ipynb  main.py  map_all_edges_scores.py  multi_route_map.py  neuroroute.db  phases.md  pipeline.md  pyproject.toml  requirements.txt  routes_api.py  server.py  start_server.bat  test_routing.py  visualize.py
mds/: README.md  easy_explanation.md  explanation.md  locations.ms  understanding.md
modeling/: __init__.py  config.py  evaluate.py  feature_engineering.py  predict_city.py  train_model.py  visualize_comparison.py
tools/: check_graph.py  generate_missing_outputs.py  map_center_check.py  pick_coords.py  test_hav.py
web/: app.js  index.html  style.css
