[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroroute-calme"
version = "0.2.0"
description = "Pedestrian route feature extraction and simulation for Casablanca"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "osmnx>=1.9",
  "geopandas>=0.14",
  "pandas>=2.0",
  "numpy>=1.24",
  "shapely>=2.0"
]

[project.scripts]
neuroroute = "main:main"
